--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,9 @@ button {
 .link {
   text-decoration: none;
 }
-.img{display: block;}
+.img {
+  display: block;
+}
 .container {
   width: 1200px;
   margin-left: auto;
@@ -70,6 +72,7 @@ button {
 }
 .header-list {
   display: flex;
+  gap: 50px;
 }
 .header-item:not:last-child {
   margin-right: 50px;
@@ -82,7 +85,9 @@ button {
   display: inline-block;
   padding: 10px;
   color: var(--color-heading);
+  
 }
+.header-link:not:last-child {margin-right: 50px;}
 
 .header-link:hover,
 .header-link:focus {
@@ -148,6 +153,7 @@ button {
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  padding: 10px 32px ;
 }
 .main-btn {
   margin-top: 30px;
@@ -169,7 +175,6 @@ button {
   color: var(--color-heading);
 }
 
-
 .benefits-paragraph {
   font-size: 14px;
   line-height: calc(24 / 14);
@@ -178,11 +183,15 @@ button {
   margin-top: 10px;
   max-width: 270px;
 }
+.developer-example {padding-bottom: 94px;}
 .developer-list {
   display: flex;
   gap: 30px;
-  padding-left: 0;}  
-  .developer-list {width: calc((100% - 60px) / 3);}
+  padding-left: 0;
+}
+.developer-list {
+  width: calc((100% - 60px) / 3);
+}
 
 .developer-heading {
   font-weight: 700;
@@ -193,12 +202,16 @@ button {
   color: var(--color-heading);
   margin-bottom: 50px;
 }
+.team-caption {padding: 30px 68px;
+text-align: center;}
 .team-list {
   display: flex;
   gap: 30px;
-  padding-left: 0; 
+  padding-left: 0;
 }
-.team-list {width: calc((100% - 90px) / 4);}
+.team-list {
+  width: calc((100% - 90px) / 4);
+}
 .team-header {
   font-weight: 700;
   font-size: 36px;
@@ -215,7 +228,7 @@ button {
   line-height: calc(19 / 16);
   letter-spacing: 0.03em;
   color: var(--color-heading);
-  margin-top: 30px;
+  
 }
 
 .team-paragraph {
@@ -233,8 +246,10 @@ button {
   padding-top: 60px;
   padding-bottom: 60px;
 }
-.footer-adress {padding-left: 0;
-margin-bottom: 9px;}
+.footer-adress {
+  padding-left: 0;
+  
+}
 
 .logo-footer > span {
   color: #ffffff;
@@ -307,6 +322,12 @@ margin-bottom: 9px;}
   flex-wrap: wrap;
   gap: 30px;
   padding-left: 0;
+}
+.border-paragraph {
+  padding-right: 24px;
+  padding-left: 24px;
+  padding-bottom: 20px;
+  border: 1px solid #eeeeee;
 }
 .example-heading {
   font-size: 18px;
